@@ -16,3 +16,9 @@ The `onlyLogRecordMetadata` container property is now `true` by default.
 A new container property `stopImmediate` is now available.
 
 See <<container-props>> for more information.
+
+[[27-listener]]
+==== `@KafkaListener` Changes
+
+You can now validate the payload parameter of `@KafkaHandler` methods (class-level listeners).
+See <<kafka-validation>> for more information.
